_cache/v0.18.0/readline/specs.md
---
title: "readline"
layout: cache
categories: [package, v0.18.0]
meta: {"versions": ["8.1"], "compilers": ["gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["ubuntu18.04"], "platforms": ["linux"], "targets": ["x86_64"], "stacks": ["build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 2, "num_specs_by_stack": {"data-vis-sdk": 1, "tutorial": 2, "root": 2, "e4s": 1, "build_systems": 1, "radiuss": 1}}
spec_details: [{"hash": "ls6erxwsj2ubsfzt4x5mblj6nrab5jkp", "compiler": "gcc@=7.5.0", "versions": ["8.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["data-vis-sdk", "tutorial", "root", "e4s", "build_systems", "radiuss"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/readline-8.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-readline-8.1-ls6erxwsj2ubsfzt4x5mblj6nrab5jkp.spack"}, {"hash": "lety7xdh7xqketm4gqeinsnriqr3t2on", "compiler": "gcc@=8.4.0", "versions": ["8.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["root", "tutorial"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.0/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/readline-8.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-readline-8.1-lety7xdh7xqketm4gqeinsnriqr3t2on.spack"}]
---