_cache/v0.18.1/readline/specs.md
---
title: "readline"
layout: cache
categories: [package, v0.18.1]
meta: {"versions": ["8.1"], "compilers": ["gcc@=7.3.1", "gcc@=7.5.0", "gcc@=8.4.0"], "oss": ["amzn2", "ubuntu18.04"], "platforms": ["linux"], "targets": ["aarch64", "graviton2", "x86_64", "x86_64_v3", "x86_64_v4"], "stacks": ["aws-ahug", "aws-ahug-aarch64", "aws-isc", "aws-isc-aarch64", "build_systems", "data-vis-sdk", "e4s", "radiuss", "root", "tutorial"], "num_specs": 6, "num_specs_by_stack": {"data-vis-sdk": 1, "tutorial": 2, "root": 6, "radiuss": 1, "build_systems": 1, "e4s": 1, "aws-isc": 2, "aws-ahug": 2, "aws-isc-aarch64": 2, "aws-ahug-aarch64": 2}}
spec_details: [{"hash": "ls6erxwsj2ubsfzt4x5mblj6nrab5jkp", "compiler": "gcc@=7.5.0", "versions": ["8.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["data-vis-sdk", "tutorial", "root", "radiuss", "build_systems", "e4s"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-7.5.0/readline-8.1/linux-ubuntu18.04-x86_64-gcc-7.5.0-readline-8.1-ls6erxwsj2ubsfzt4x5mblj6nrab5jkp.spack"}, {"hash": "eeu2ggbpqw7sqh2k646vs7x6ife4fdty", "compiler": "gcc@=7.3.1", "versions": ["8.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v4", "variants": [], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v4/gcc-7.3.1/readline-8.1/linux-amzn2-x86_64_v4-gcc-7.3.1-readline-8.1-eeu2ggbpqw7sqh2k646vs7x6ife4fdty.spack"}, {"hash": "j2x3kdqrdfu4h25i36ky3aufj6dm37rs", "compiler": "gcc@=7.3.1", "versions": ["8.1"], "os": "amzn2", "platform": "linux", "target": "graviton2", "variants": [], "stacks": ["root", "aws-isc-aarch64", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-graviton2/gcc-7.3.1/readline-8.1/linux-amzn2-graviton2-gcc-7.3.1-readline-8.1-j2x3kdqrdfu4h25i36ky3aufj6dm37rs.spack"}, {"hash": "yezrdqazwnyl53u2esczrt67ite6qto2", "compiler": "gcc@=7.3.1", "versions": ["8.1"], "os": "amzn2", "platform": "linux", "target": "aarch64", "variants": [], "stacks": ["root", "aws-isc-aarch64", "aws-ahug-aarch64"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-aarch64/gcc-7.3.1/readline-8.1/linux-amzn2-aarch64-gcc-7.3.1-readline-8.1-yezrdqazwnyl53u2esczrt67ite6qto2.spack"}, {"hash": "qa3rzfivh5c5vzzeq2osvgd7xur5ciig", "compiler": "gcc@=7.3.1", "versions": ["8.1"], "os": "amzn2", "platform": "linux", "target": "x86_64_v3", "variants": [], "stacks": ["aws-isc", "root", "aws-ahug"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-amzn2-x86_64_v3/gcc-7.3.1/readline-8.1/linux-amzn2-x86_64_v3-gcc-7.3.1-readline-8.1-qa3rzfivh5c5vzzeq2osvgd7xur5ciig.spack"}, {"hash": "lety7xdh7xqketm4gqeinsnriqr3t2on", "compiler": "gcc@=8.4.0", "versions": ["8.1"], "os": "ubuntu18.04", "platform": "linux", "target": "x86_64", "variants": [], "stacks": ["tutorial", "root"], "size": "-", "tarball": "https://binaries.spack.io/releases/v0.18.1/build_cache/linux-ubuntu18.04-x86_64/gcc-8.4.0/readline-8.1/linux-ubuntu18.04-x86_64-gcc-8.4.0-readline-8.1-lety7xdh7xqketm4gqeinsnriqr3t2on.spack"}]
---